<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Food</string>
    <string name="search_title">Search</string>
    <string name="title_activity_splasy">SplasyActivity</string>
    <string name="fiber">fiber</string>
    <string name="fat">fat</string>
    <string name="protein">prot</string>
    <string name="carbohydrates">carbs</string>
    <string name="calories">cal</string>
	<string name="conexion_error">upps! connection error</string>
	<string name="save">Save Info</string>
	<string name="offline">Offline Mode</string>
	<string name="select_view">Select View</string>
	<string name="select_display">Select Display</string>
	<string name="choise_row">Row</string>
	<string name="choise_block">Block</string>
	<string name="choise_list">List</string>
	<string name="choise_gallery">Gallery</string>
	<string name="choise_grid">Grid</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="no_internet">There is no internet to search</string>
	<string name="welcome">Click on search to start to find food</string>
	<string name="save_title">Save results in device</string>
</resources>
